base/static/css/gob.cl.scss
/*
  gob.cl and bs.4 settings.
 -------------------------------------------------- */

@import "_variables";
@import "../../../node_modules/bootstrap/scss/bootstrap";
@import "../../../node_modules/@gobdigital-cl/gob.cl/src/scss/gob.cl";

.cke_editable {
  &.main-post {
    padding-bottom: 0;

    &:after {
      content: '';
    }
  }
}

